Implement kana board
