# DidacticalEnigma.Next/Models/KanaBoardLayout.cs
@@ -1,0 +1,6 @@
+namespace DidacticalEnigma.Next.Models;
+
+public enum KanaBoardLayout
+{
+    TopToBottomLeftToRight
+}
